--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
 				<input type="button" value="mrc" class="button function" onClick="">
 				<input type="button" value="m-" class="button function" onClick="">
 				<input type="button" value="m+" class="button function" onClick="">
+				<input type="button" value="mr" class="button function" onClick="">
+				
+			</p>
+			<p>
+				<input type="button" value="(" class="button operator" onClick="v('(')">
+				<input type="button" value=")" class="button operator" onClick="v(')')">
 				<input type="button" value="/" class="button operator" onClick="v('/')">
+				<input type
+				
 			</p>
 			<p>
 				<input type="button" value="7" class="button number" onClick="v('7')">
