--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<input type="button" value="(" class="button operator" onClick="v('(')">
 				<input type="button" value=")" class="button operator" onClick="v(')')">
 				<input type="button" value="/" class="button operator" onClick="v('/')">
-				
+				<input type="button" value="π" class="button operator" onClick="v('3.14159265359')">
 			</p>
 			<p>
 				<input type="button" value="7" class="button number" onClick="v('7')">
