added alerts not yet implemented

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		</div>
 		<div class="keys">
 			<p>
-				<input type="button" value="mrc" class="button function" onClick="">
-				<input type="button" value="m-" class="button function" onClick="">
-				<input type="button" value="m+" class="button function" onClick="">
-				<input type="button" value="mr" class="button function" onClick="">
+				<input type="button" value="mrc" class="button function" onClick="alert('This function is not yet implemented.')">
+				<input type="button" value="m-" class="button function" onClick="alert('This function is not yet implemented.')">
+				<input type="button" value="m+" class="button function" onClick="alert('This function is not yet implemented.')">
+				<input type="button" value="mr" class="button function" onClick="alert('This function is not yet implemented.')">
 				
 			</p>
 			<p>
